[gd_scene load_steps=22 format=2]

[ext_resource path="res://Audio/Sound FX/true-ghost-break-180-bpm-102898.mp3" type="AudioStream" id=1]
[ext_resource path="res://Level Construction Tools/NoWasdPlayer/NoWasdPlayer.gd" type="Script" id=3]
[ext_resource path="res://Level Construction Tools/NoWasdPlayer/Input.gd" type="Script" id=4]
[ext_resource path="res://Level Construction Tools/NoWasdPlayer/codebot sprite sheet.png" type="Texture" id=5]
[ext_resource path="res://Audio/Sound FX/thruster_Edit_1_Export_1.mp3" type="AudioStream" id=6]
[ext_resource path="res://Level Construction Tools/NoWasdPlayer/Restart Button.gd" type="Script" id=7]
[ext_resource path="res://Assets/UI/restart button.png" type="Texture" id=8]

[sub_resource type="Animation" id=7]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27 ]
}

[sub_resource type="Animation" id=2]
length = 1.2
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=3]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21, 22 ]
}

[sub_resource type="Animation" id=8]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 27, 28, 29 ]
}

[sub_resource type="Animation" id=4]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=9]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.5, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 7 ]
}

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 10.484, 18.1311 )

[sub_resource type="CapsuleShape2D" id=1]
height = 0.0

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 5, 10 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 10, 21 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )

[sub_resource type="StyleBoxEmpty" id=13]

[node name="NoWasdPlayer" type="KinematicBody2D"]
position = Vector2( 120, 248 )
script = ExtResource( 3 )

[node name="Move_Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = -28.796

[node name="Thruster" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = 7.311

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Falling = SubResource( 7 )
anims/Idle = SubResource( 2 )
anims/Jump = SubResource( 3 )
"anims/Long Fall" = SubResource( 8 )
anims/Moving = SubResource( 4 )
"anims/Pre Idle" = SubResource( 9 )
anims/RESET = SubResource( 5 )
"anims/Typing Idle" = SubResource( 6 )

[node name="Teleport Collide Parent" type="Area2D" parent="."]
position = Vector2( 0, -16 )

[node name="Teleport Collide" type="CollisionShape2D" parent="Teleport Collide Parent"]
position = Vector2( 0.483955, -7.89604 )
shape = SubResource( 14 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -16 )
texture = ExtResource( 5 )
hframes = 6
vframes = 6

[node name="Wheel Hitbox" type="CollisionShape2D" parent="."]
position = Vector2( 0, 6 )
shape = SubResource( 1 )

[node name="Arm Hitbox" type="CollisionShape2D" parent="."]
position = Vector2( -13, -14 )
shape = SubResource( 11 )

[node name="Arm Hitbox2" type="CollisionShape2D" parent="."]
position = Vector2( 13, -14 )
shape = SubResource( 11 )

[node name="Torso Hitbox" type="CollisionShape2D" parent="."]
position = Vector2( 0, -21 )
shape = SubResource( 10 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -16 )
current = true
zoom = Vector2( 0.4, 0.4 )

[node name="Text Movement" type="Control" parent="Camera2D"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 229.0
margin_top = -140.0
margin_right = 379.0
margin_bottom = 145.0
rect_min_size = Vector2( 150, 285 )

[node name="Background" type="PanelContainer" parent="Camera2D/Text Movement"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 12 )

[node name="MarginContainer" type="MarginContainer" parent="Camera2D/Text Movement/Background"]
margin_right = 150.0
margin_bottom = 285.0
custom_constants/margin_right = 7
custom_constants/margin_top = 7
custom_constants/margin_left = 7
custom_constants/margin_bottom = 7

[node name="VBoxContainer" type="VBoxContainer" parent="Camera2D/Text Movement/Background/MarginContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 143.0
margin_bottom = 278.0
custom_constants/separation = 7

[node name="OutputTop" type="PanelContainer" parent="Camera2D/Text Movement/Background/MarginContainer/VBoxContainer"]
margin_right = 136.0
margin_bottom = 226.0
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="Camera2D/Text Movement/Background/MarginContainer/VBoxContainer/OutputTop"]
margin_left = 7.0
margin_top = 7.0
margin_right = 129.0
margin_bottom = 219.0
scroll_horizontal_enabled = false

[node name="TextHistory" type="VBoxContainer" parent="Camera2D/Text Movement/Background/MarginContainer/VBoxContainer/OutputTop/ScrollContainer"]
custom_constants/separation = 10

[node name="InputContainer" type="PanelContainer" parent="Camera2D/Text Movement/Background/MarginContainer/VBoxContainer"]
margin_top = 233.0
margin_right = 136.0
margin_bottom = 271.0
rect_min_size = Vector2( 0, 38 )

[node name="HBoxContainer" type="HBoxContainer" parent="Camera2D/Text Movement/Background/MarginContainer/VBoxContainer/InputContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 129.0
margin_bottom = 31.0

[node name="Caret" type="Label" parent="Camera2D/Text Movement/Background/MarginContainer/VBoxContainer/InputContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 8.0
margin_bottom = 19.0
text = ">"

[node name="Input" type="LineEdit" parent="Camera2D/Text Movement/Background/MarginContainer/VBoxContainer/InputContainer/HBoxContainer"]
margin_left = 12.0
margin_right = 122.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_styles/normal = SubResource( 13 )
max_length = 13
script = ExtResource( 4 )

[node name="Restart Button" type="Button" parent="Camera2D"]
margin_left = 359.0
margin_top = -153.0
margin_right = 377.052
margin_bottom = -133.0
flat = true
script = ExtResource( 7 )

[node name="Button_Texture" type="TextureRect" parent="Camera2D/Restart Button"]
texture = ExtResource( 8 )

[node name="fallTimer" type="Timer" parent="."]
wait_time = 0.675
one_shot = true

[connection signal="finished" from="Move_Sound" to="." method="_on_Move_Sound_finished"]
[connection signal="text_entered" from="Camera2D/Text Movement/Background/MarginContainer/VBoxContainer/InputContainer/HBoxContainer/Input" to="." method="_on_Input_text_entered"]
[connection signal="text_entered" from="Camera2D/Text Movement/Background/MarginContainer/VBoxContainer/InputContainer/HBoxContainer/Input" to="Camera2D/Text Movement/Background/MarginContainer/VBoxContainer/InputContainer/HBoxContainer/Input" method="_on_Input_text_entered"]
[connection signal="mouse_entered" from="Camera2D/Restart Button" to="Camera2D/Restart Button" method="_on_Restart_Button_mouse_entered"]
[connection signal="mouse_exited" from="Camera2D/Restart Button" to="Camera2D/Restart Button" method="_on_Restart_Button_mouse_exited"]
[connection signal="pressed" from="Camera2D/Restart Button" to="Camera2D/Restart Button" method="_on_Restart_Button_pressed"]
[connection signal="toggled" from="Camera2D/Restart Button" to="Camera2D/Restart Button" method="_on_Restart_Button_toggled"]
[connection signal="timeout" from="fallTimer" to="." method="_on_fallTimer_timeout"]
